Add BDD login tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
             ],
             "@apps/*": [
                 "./apps/*"
+            ],
+            "@resources/*": [
+                "./resources/*"
             ]
         }
     },
